--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		body {
 			margin: 0;
 			overflow: hidden;
+			font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 		}
 
 		.dir-button {
@@ -51,11 +52,41 @@
 		.dir-button.transparent {
 			opacity: 0;
 		}
+
+		.state-gameover .dir-button {
+			display: none;
+		}
+
+		.gameover-sign {
+			display: none;
+			position: fixed;
+			font-size: 38px;
+			color: red;
+			left: 50%;
+			top: 50%;
+			transform: translate(-50%, -50%);
+			text-align: center;
+			cursor: pointer;
+		}
+
+		.gameover-subtitle {
+			color: white;
+			font-size: 0.5em;
+			margin: 0;
+		}
+
+		.state-gameover .gameover-sign {
+			display: block;
+		}
 	</style>
 </head>
 <body>
 	<div class="dir-button left"></div>
 	<div class="dir-button right"></div>
+	<div class="gameover-sign">
+		<p>YOU DIED</p>
+		<p class="gameover-subtitle">PRESS TO START AGAIN</p>
+	</div>
 
 	<script src="./src/index.js"></script>
 </body>
